--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="me">
-            <img src="images/myPicture.jpg" alt="My Picture" height="200"/> 
+            <img src="images/myPicture.jpg" alt="My Picture" height="200" loading="lazy"/> 
             <h1>Lucio O. Boccazzi</h1>
         </div>
 
@@ -41,7 +41,7 @@
     
         <section class="card2">
             <h2>Buenos Aires, Argentina</h2>
-            <img src="images/flag.png" alt="My Flag" height="150"/> 
+            <img src="images/flag.png" alt="My Flag" height="150" loading="lazy"/> 
             <h4>Official Flag of Argentina</h4>
         </section>
 
