--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
 
         <section class="card3">
             <h2>Web and Computer Programming Certificate</h2>
-
-            <p></p>
-
+            <div id="filter-buttons">
+                <button id="all-courses-btn">Show All Courses</button>
+                <button id="cse-courses-btn">Show CSE Courses</button>
+                <button id="wdd-courses-btn">Show WDD Courses</button>
+            </div>
+            <div id="course-list"></div>
+            <p id="total-credits"></p>
         </section>
 
     </main>
