--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
     <link rel="icon" href="favicon.ico">
 
+    <meta property="og:title" content="Lucio's Home Page" />
+    <meta property="og:description" content="This is Lucio's Home to WDD 231 - Web Frontend Development I.">
+    <meta property="og:url" content="https://lucioboccazzi.github.io/wdd231/" />
+    <meta property="og:image" content="https://cdn.pixabay.com/photo/2023/02/28/12/41/letter-7820764_960_720.png" />
+
 </head>
 
 <body>
