--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,8 +13,8 @@
     <meta name="twitter:title" content="CABA - Chamber of Commerce" />
     <meta property="og:type" content="website"/>
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:image" href="images/CABA-image.jpg" />
-    <meta name="twitter:image" href="images/CABA-image.jpg" />
+    <meta property="og:image" content="images/CABA-image.jpg" />
+    <meta name="twitter:image" content="images/CABA-image.jpg" />
     <meta property="og:url" content="" />
     <meta name="twitter:url" content="" />
 
@@ -64,8 +64,6 @@
                 <p><strong>Tuesday:</strong> Sunny, 26°C</p>
                 <p><strong>Wednesday:</strong> Light Rain, 22°C</p>
             </div>
-
-        </div>
         </div>
 
         <h1>Company Members</h1>
