--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce Directory Page</title>
-    <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is the Directory page to the Chamber of Commerce." />
+    <title>Chamber of Commerce Home Page</title>
+    <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is a Home Page to the Chamber of Commerce." />
     <meta name="author" content="Lucio Boccazzi" />
     <link rel="icon" href="favicon.ico">
 
@@ -31,49 +31,12 @@
 </head>
 <body>
     <header>
-        <h1>Chamber of Commerce - CABA</h1>
+        <h1>Chamber of Commerce - Home Page </h1>
         <div class="nav-links" id="nav-links">
-            <a href="" title="Home">Home</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
             <a href="" title="Discover">Discover</a>
-            <a href="" title="Directory">Directory</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="" title="Join">Join</a>
-        </div>
-    </header>
-
-    <main>
-
-        <div class="card-grid">
-            <div class="card event-card">
-                <h2>Event</h2>
-
-            </div>
-    
-            <!-- Weather Card -->
-            <div class="card weather-card">
-                <h2>Weather in Buenos Aires</h2>
-                <p><strong>Temperature:</strong> 22°C</p>
-                <p><img src="http://openweathermap.org/img/wn/10d.png" alt="Rainy" /> Currently: Light Rain</p>
-                <p><strong>Humidity:</strong> 87%</p>
-                <p><strong>Wind:</strong> 15 km/h</p>
-            </div>
-    
-            <!-- Forecast Card -->
-            <div class="card forecast-card">
-                <h2>Weather Forecast for Buenos Aires</h2>
-                <p><strong>Today:</strong> Partly Cloudy, 24°C</p>
-                <p><strong>Tuesday:</strong> Sunny, 26°C</p>
-                <p><strong>Wednesday:</strong> Light Rain, 22°C</p>
-            </div>
-        </div>
-
-        <h1>Company Members</h1>
- 
-        <div>
-            <button id="toggle-view" class="toggle-view-btn">Switch to List View</button>
-        </div>
-
-        <div id="members-container">
-
         </div>
 
     </main>
