--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,9 +33,9 @@
     <header>
         <h1>Chamber of Commerce - CABA</h1>
         <div class="nav-links" id="nav-links">
-            <a href="" title="Home">Home</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
             <a href="" title="Discover">Discover</a>
-            <a href="" title="Directory">Directory</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="" title="Join">Join</a>
         </div>
     </header>
