--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <header>
-        <h1>Chamber of Commerce - CABA</h1>
+        <h1>Chamber of Commerce - CABA - Directory</h1>
         <div class="nav-links" id="nav-links">
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
             <a href="" title="Discover">Discover</a>
