--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,6 +21,7 @@
     <!-- Styles, Scripts and Fonts -->
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/directory.css"/>
+    <link rel="stylesheet" href="styles/home.css"/>
 
     <script src="scripts/directory.js" defer></script>
 
@@ -38,6 +39,16 @@
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="" title="Join">Join</a>
         </div>
+
+    <main>
+
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Welcome to the Chamber of Commerce</h2>
+                <p>Your gateway to networking and business growth.</p>
+                <a href="" class="btn">Learn More</a>
+            </div>
+        </section>
 
     </main>
 
