--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,16 +18,14 @@
     <meta property="og:url" content="" />
     <meta name="twitter:url" content="" />
 
-    <!-- Styles, Scripts and Fonts -->
+    <!-- Styles, Scripts, and Fonts -->
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/directory.css"/>
-
     <script src="scripts/directory.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header>
@@ -41,14 +39,11 @@
     </header>
 
     <main>
-
         <div class="card-grid">
             <div class="card event-card">
                 <h2>Event</h2>
-
             </div>
     
-            <!-- Weather Card -->
             <div class="card weather-card">
                 <h2>Weather in Buenos Aires</h2>
                 <p><strong>Temperature:</strong> 22°C</p>
@@ -57,7 +52,6 @@
                 <p><strong>Wind:</strong> 15 km/h</p>
             </div>
     
-            <!-- Forecast Card -->
             <div class="card forecast-card">
                 <h2>Weather Forecast for Buenos Aires</h2>
                 <p><strong>Today:</strong> Partly Cloudy, 24°C</p>
@@ -75,7 +69,6 @@
         <div id="members-container">
 
         </div>
-
     </main>
 
     <footer>
