--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,92 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce Home Page</title>
-    <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is a Home Page to the Chamber of Commerce." />
-    <meta name="author" content="Lucio Boccazzi" />
-    <link rel="icon" href="favicon.ico">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Chamber of Commerce Home Page</title>
+        <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is a Home Page to the Chamber of Commerce." />
+        <meta name="author" content="Lucio Boccazzi" />
+        <link rel="icon" href="favicon.ico">
 
-    <!-- Social media meta tags -->
-    <meta property="og:title" content="CABA - Chamber of Commerce" />
-    <meta name="twitter:title" content="CABA - Chamber of Commerce" />
-    <meta property="og:type" content="website"/>
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:image" content="images/CABA-image.jpg" />
-    <meta name="twitter:image" content="images/CABA-image.jpg" />
-    <meta property="og:url" content="" />
-    <meta name="twitter:url" content="" />
+        <!-- Social media meta tags -->
+        <meta property="og:title" content="CABA - Chamber of Commerce" />
+        <meta name="twitter:title" content="CABA - Chamber of Commerce" />
+        <meta property="og:type" content="website"/>
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="og:image" content="images/CABA-image.jpg" />
+        <meta name="twitter:image" content="images/CABA-image.jpg" />
+        <meta property="og:url" content="" />
+        <meta name="twitter:url" content="" />
 
-    <!-- Styles, Scripts and Fonts -->
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/directory.css"/>
-    <link rel="stylesheet" href="styles/home.css"/>
+        <!-- Styles, Scripts and Fonts -->
+        <link rel="stylesheet" href="styles/normalize.css" />
+        <link rel="stylesheet" href="styles/directory.css"/>
+        <link rel="stylesheet" href="styles/home.css"/>
 
-    <script src="scripts/directory.js" defer></script>
-    <script src="scripts/home.js" defer></script>
+        <script src="scripts/directory.js" defer></script>
+        <script src="scripts/home.js" defer></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-</head>
-<body>
-    <header>
-        <h1>Chamber of Commerce - Home Page </h1>
-        <div class="nav-links" id="nav-links">
-            <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
-            <a href="" title="Discover">Discover</a>
-            <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
-            <a href="" title="Join">Join</a>
-        </div>
-
-    <main>
-
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Welcome to the Chamber of Commerce</h2>
-                <p>Your gateway to networking and business growth.</p>
-                <a href="" class="btn">Learn More</a>
+    </head>
+    <body>
+        <header>
+            <h1>Chamber of Commerce - Home Page </h1>
+            <div class="nav-links" id="nav-links">
+                <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
+                <a href="" title="Discover">Discover</a>
+                <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
+                <a href="" title="Join">Join</a>
             </div>
-        </section>
 
-        <div class="card-grid">
-            <div class="card event-card">
-                <h2>Current Events</h2>
-                <p>**</p>
-                <p>**</p>
-                <p>**</p>
+        </header>
 
-            </div>
-    
-            <!-- Weather Card -->
-            <div id="weather" class="weather-card">
-                <h2 class="weather-title">Weather for Chamber Location</h2>
-                <p id="current-temp" class="weather-current-temp">Current Temperature: </p>
-                <p id="weather-description" class="weather-description">Weather: </p>
-                <div id="forecast" class="forecast-container">
-                  <h3 class="forecast-title">3-Day Forecast:</h3>
-                  <ul class="forecast-list">
-                    <li id="day1" class="forecast-item">Day 1: </li>
-                    <li id="day2" class="forecast-item">Day 2: </li>
-                    <li id="day3" class="forecast-item">Day 3: </li>
-                  </ul>
+        <main>
+
+            <section class="hero">
+                <div class="hero-content">
+                    <h2>Welcome to the Chamber of Commerce</h2>
+                    <p>Your gateway to networking and business growth.</p>
+                    <a href="" class="btn">Learn More</a>
                 </div>
-            </div>           
+            </section>
 
-            <div id="business-spotlights" class="spotlight-cards">
+            <div class="card-grid">
+                <div class="card event-card">
+                    <h2>Current Events</h2>
+                    <p>**</p>
+                    <p>**</p>
+                    <p>**</p>
+
+                </div>
+        
+                <!-- Weather Card -->
+                <div id="weather" class="weather-card">
+                    <h2 class="weather-title">Weather for Chamber Location</h2>
+                    <p id="current-temp" class="weather-current-temp">Current Temperature: </p>
+                    <p id="weather-description" class="weather-description">Weather: </p>
+                    <div id="forecast" class="forecast-container">
+                    <h3 class="forecast-title">3-Day Forecast:</h3>
+                    <ul class="forecast-list">
+                        <li id="day1" class="forecast-item">Day 1: </li>
+                        <li id="day2" class="forecast-item">Day 2: </li>
+                        <li id="day3" class="forecast-item">Day 3: </li>
+                    </ul>
+                    </div>
+                </div>           
+
+                <div id="business-spotlights" class="spotlight-cards">
+
+                </div>
 
             </div>
 
-        </div>
+        </main>
 
-    </main>
-
-    <footer>
-        <p>Contact Information: cabacommerce@gmail.com</p>
-        <p>© <span id="year"></span> - Lucio Boccazzi - Argentina</p>
-        <p>Last Modification: <span id="lastModified"></span></p>
-    </footer>
-</body>
+        <footer>
+            <p>Contact Information: cabacommerce@gmail.com</p>
+            <p>© <span id="year"></span> - Lucio Boccazzi - Argentina</p>
+            <p>Last Modification: <span id="lastModified"></span></p>
+        </footer>
+    </body>
 </html>
