--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
                 <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
                 <a href="" title="Discover">Discover</a>
                 <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
-                <a href="" title="Join">Join</a>
+                <a href="https://lucioboccazzi.github.io/wdd231/chamber/join.html" title="Join">Join</a>
             </div>
 
         </header>
