--- a/chamber/join.html
+++ b/chamber/join.html
@@ -19,7 +19,7 @@
         <!-- Styles, Scripts and Fonts -->
         <link rel="stylesheet" href="styles/normalize.css" />
         <link rel="stylesheet" href="styles/directory.css"/>
-
+        <script src="scripts/directory.js" defer></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,14 +27,26 @@
 </head>
 
 <body>
-    <h1>Chamber of Commerce - Join Us </h1>
+    <header>
+        <h1>Chamber of Commerce - Join Us </h1>
 
-    <div class="nav-links" id="nav-links">
-        <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
-        <a href="" title="Discover">Discover</a>
-        <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
-        <a href="" title="Join">Join</a>
-    </div>
+        <div class="nav-links" id="nav-links">
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
+            <a href="" title="Discover">Discover</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/join.html" title="Join">Join</a>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <p>Contact Information: cabacommerce@gmail.com</p>
+        <p>© <span id="year"></span> - Lucio Boccazzi - Argentina</p>
+        <p>Last Modification: <span id="lastModified"></span></p>
+    </footer>
     
 </body>
 </html>
