--- a/chamber/join.html
+++ b/chamber/join.html
@@ -2,30 +2,34 @@
 <html lang="en">
 <head>
     <title>Chamber of Commerce - Join</title>
-        <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is the page where you can provide your information to join." />
-        <meta name="author" content="Lucio Boccazzi" />
-        <link rel="icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is the page where you can provide your information to join." />
+    <meta name="author" content="Lucio Boccazzi" />
+    <link rel="icon" href="favicon.ico">
+    
 
-        <!-- Social media meta tags -->
-        <meta property="og:title" content="CABA - Chamber of Commerce" />
-        <meta name="twitter:title" content="CABA - Chamber of Commerce" />
-        <meta property="og:type" content="website"/>
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta property="og:image" content="images/CABA-image.jpg" />
-        <meta name="twitter:image" content="images/CABA-image.jpg" />
-        <meta property="og:url" content="" />
-        <meta name="twitter:url" content="" />
+    <!-- Social media meta tags -->
+    <meta property="og:title" content="CABA - Chamber of Commerce" />
+    <meta name="twitter:title" content="CABA - Chamber of Commerce" />
+    <meta property="og:type" content="website"/>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content="images/CABA-image.jpg" />
+    <meta name="twitter:image" content="images/CABA-image.jpg" />
+    <meta property="og:url" content="" />
+    <meta name="twitter:url" content="" />
 
-        <!-- Styles, Scripts and Fonts -->
-        <link rel="stylesheet" href="styles/normalize.css" />
-        <link rel="stylesheet" href="styles/directory.css"/>
-        <link rel="stylesheet" href="styles/join.css"/>
+    <!-- Styles, Scripts and Fonts -->
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/directory.css"/>
+    <link rel="stylesheet" href="styles/join.css"/>
 
-        <script src="scripts/join.js" defer></script>
+    <script src="scripts/join.js" defer></script>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
