--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,7 +7,6 @@
     <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is the page where you can provide your information to join." />
     <meta name="author" content="Lucio Boccazzi" />
     <link rel="icon" href="favicon.ico">
-    
 
     <!-- Social media meta tags -->
     <meta property="og:title" content="CABA - Chamber of Commerce" />
@@ -16,10 +15,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:image" content="images/CABA-image.jpg" />
     <meta name="twitter:image" content="images/CABA-image.jpg" />
-    <meta property="og:url" content="" />
-    <meta name="twitter:url" content="" />
+    <meta property="og:url" content="https://example.com/join" />
+    <meta name="twitter:url" content="https://example.com/join" />
 
-    <!-- Styles, Scripts and Fonts -->
+    <!-- Styles, Scripts, and Fonts -->
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/directory.css"/>
     <link rel="stylesheet" href="styles/join.css"/>
@@ -34,7 +33,7 @@
 
 <body>
     <header>
-        <h1>Chamber of Commerce - Join Us </h1>
+        <h1>Chamber of Commerce - Join Us</h1>
 
         <div class="nav-links" id="nav-links">
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
@@ -105,6 +104,6 @@
         <p>© <span id="year"></span> - Lucio Boccazzi - Argentina</p>
         <p>Last Modification: <span id="lastModified"></span></p>
     </footer>
-    
+
 </body>
 </html>
