--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -6,6 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thank You for Joining - Chamber</title>
 
+    <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is a Home Page to the Chamber of Commerce." />
+    <meta name="author" content="Lucio Boccazzi" />
+
+    <!-- Social media meta tags -->
+    <meta property="og:title" content="CABA - Chamber of Commerce" />
+    <meta name="twitter:title" content="CABA - Chamber of Commerce" />
+    <meta property="og:type" content="website"/>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content="images/CABA-image.jpg" />
+    <meta name="twitter:image" content="images/CABA-image.jpg" />
+    <meta property="og:url" content="" />
+    <meta name="twitter:url" content="" />
+
     <link rel="icon" href="favicon.ico">
 
     <link rel="stylesheet" href="styles/normalize.css" />
