--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -30,12 +30,14 @@
 <body>
     <header>
         <h1>Chamber of Commerce - CABA - Directory</h1>
-        <div class="nav-links" id="nav-links">
+        
+        <nav class="nav-links" id="nav-links">
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
             <a href="" title="Discover">Discover</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/join.html" title="Join">Join</a>
-        </div>
+        </nav>
+        
     </header>
 
     <main>
