--- a/chamber/join.html
+++ b/chamber/join.html
@@ -33,12 +33,13 @@
     <header>
         <h1>Chamber of Commerce - Join Us</h1>
 
-        <div class="nav-links" id="nav-links">
+        <nav class="nav-links" id="nav-links">
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
             <a href="" title="Discover">Discover</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/join.html" title="Join">Join</a>
-        </div>
+        </nav>
+        
     </header>
 
     <main>
