--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,7 +12,7 @@
     <!-- Social media meta tags -->
     <meta property="og:title" content="CABA - Chamber of Commerce" />
     <meta name="twitter:title" content="CABA - Chamber of Commerce" />
-    <meta property="og:type" content="website"/>
+    <meta property="og:website" content="website"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:image" content="images/CABA-image.jpg" />
     <meta name="twitter:image" content="images/CABA-image.jpg" />
