--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -12,7 +12,7 @@
     <!-- Social media meta tags -->
     <meta property="og:title" content="CABA - Chamber of Commerce" />
     <meta name="twitter:title" content="CABA - Chamber of Commerce" />
-    <meta property="og:type" content="website"/>
+    <meta property="og:website" content="website"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:image" content="images/CABA-image.jpg" />
     <meta name="twitter:image" content="images/CABA-image.jpg" />
@@ -39,7 +39,7 @@
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/join.html" title="Join">Join</a>
         </nav>
-        
+
     </header>
 
     <main>
