--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover - Chamber</title>
+    <title> Discover Page - Chamber of Commerce</title>
 
     <meta name="description" content="WDD 231 - Chamber of Commerce. Lucio Boccazzi. This page is a Discover Page to the Chamber of Commerce." />
     <meta name="author" content="Lucio Boccazzi" />
@@ -30,7 +30,7 @@
 <body>
 
     <header>
-        <h1>Discover - Chamber of Commerse</h1>
+        <h1>Discover - Chamber of Commerce</h1>
 
         <nav class="nav-links" id="nav-links">
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
@@ -62,12 +62,17 @@
             </aside>
 
             <div class="main-content">
-                <img src="images/photo1.jpg" alt="Local Attraction 1" loading="lazy" />
-                <img src="images/photo2.jpg" alt="Local Attraction 2" loading="lazy" />
+                <img src="images/photo1.jpg" alt="Local Attraction 1" loading="lazy" width="600" height="400" />
+
+                <img src="images/photo2.jpg" alt="Local Attraction 2" loading="lazy" width="600" height="400" />
+
                 <img src="images/photo3.jpg" alt="Local Attraction 3" loading="lazy" />
+
                 <img src="images/photo4.jpg" alt="Local Attraction 4" loading="lazy" />
-                <img src="images/photo5.jpg" alt="Local Attraction 5" loading="lazy" />
-                <img src="images/photo6.jpg" alt="Local Attraction 6" loading="lazy" />
+
+                <img src="images/photo5.jpg" alt="Local Attraction 5" loading="lazy" width="600" height="400" />
+    
+                <img src="images/photo6.jpg" alt="Local Attraction 6" loading="lazy" width="600" height="400" />
             </div>
         </div>
     </main>
