--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,7 +24,6 @@
     <link rel="stylesheet" href="styles/directory.css"/>
 
     <script src="scripts/discover.js" defer></script>
-
 </head>
 
 <body>
@@ -34,7 +33,7 @@
 
         <nav class="nav-links" id="nav-links">
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
-            <a href="" title="Discover">Discover</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/discover.html" title="Discover">Discover</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/join.html" title="Join">Join</a>
         </nav>
@@ -44,21 +43,29 @@
         <div class="container">
   
             <aside class="sidebar">
-                <h2>Demographics</h2>
-                <p>Population: 1,200,000</p>
-                <p>Average Age: 35</p>
+                <div class="sidebar-section demographics">
+                    <h2>Demographics</h2>
+                    <p>Population: 1,200,000</p>
+                    <p>Average Age: 35</p>
+                </div>
 
-                <h2>Events</h2>
-                <ul>
-                    <li>Chamber Networking Event - Jan 15</li>
-                    <li>Business Expo - March 10</li>
-                </ul>
+                <div class="sidebar-section events">
+                    <h2>Events</h2>
+                    <ul>
+                        <li>Chamber Networking Event - Jan 15</li>
+                        <li>Business Expo - March 10</li>
+                    </ul>
+                </div>
 
-                <h2>Attractions</h2>
-                <ul>
-                    <li>City Park</li>
-                    <li>Historical Museum</li>
-                </ul>
+                <div class="sidebar-section attractions">
+                    <h2>Attractions</h2>
+                    <ul>
+                        <li>City Park</li>
+                        <li>Historical Museum</li>
+                    </ul>
+                </div>
+
+                <div id="visitMessage"></div> 
             </aside>
 
             <div class="main-content">
@@ -66,9 +73,9 @@
 
                 <img src="images/photo2.jpg" alt="Local Attraction 2" loading="lazy" width="600" height="400" />
 
-                <img src="images/photo3.jpg" alt="Local Attraction 3" loading="lazy" />
+                <img src="images/photo3.jpg" alt="Local Attraction 3" loading="lazy" width="600" height="400" />
 
-                <img src="images/photo4.jpg" alt="Local Attraction 4" loading="lazy" />
+                <img src="images/photo4.jpg" alt="Local Attraction 4" loading="lazy" width="600" height="400" />
 
                 <img src="images/photo5.jpg" alt="Local Attraction 5" loading="lazy" width="600" height="400" />
     
