--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -35,7 +35,7 @@
 
         <nav class="nav-links" id="nav-links">
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/index.html" title="Home">Home</a>
-            <a href="" title="Discover">Discover</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/chamber/discover.html" title="Discover">Discover</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/directory.html" title="Directory">Directory</a>
             <a href="https://lucioboccazzi.github.io/wdd231/chamber/join.html" title="Join">Join</a>
         </nav>
