--- a/project-plan.html
+++ b/project-plan.html
@@ -9,8 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&family=Roboto:wght@100..900&family=Merriweather:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,18 +21,14 @@
             <a href="" title="Individual Sports">Individual Sports</a>
             <a href="" title="Join">Join</a>
         </nav>
-
     </header>
 
     <main>
-
         <div class="card-grid">
-
             <div class="purpose">
                 <h1>Site Purpose:</h1>
                 <p>This website will provide you information about the most relevant sports in Argentina, some general information,
                 where to join the most important clubs to start practicing those sport, and more interesting data.</p>
-            
             </div>
 
             <div class="scenarios">
@@ -41,9 +36,7 @@
                 <p>What are some team sports I can start learning today?</p>
                 <p>What are individual sports I can play and compete in?</p>
             </div>  
-
         </div>
-
     </main>
 
     <footer>
