--- a/project.html
+++ b/project.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="styles/project.css"/>
 
+    <script src="scripts/project.js" defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -27,22 +29,6 @@
 
     <main>
 
-        <div class="card-grid">
-
-            <div class="purpose">
-                <h1>Site Purpose:</h1>
-                <p>This website will provide you information about the most relevant sports in Argentina, some general information,
-                where to join the most important clubs to start practicing those sport, and more interesting data.</p>
-            
-            </div>
-
-            <div class="scenarios">
-                <h1>Scenarios:</h1>
-                <p>What are some team sports I can start learning today?</p>
-                <p>What are individual sports I can play and compete in?</p>
-            </div>  
-
-        </div>
 
     </main>
 
