--- a/project.html
+++ b/project.html
@@ -6,6 +6,7 @@
     <title>Chamber of Sports</title>
 
     <link rel="stylesheet" href="styles/project.css"/>
+    <link rel="stylesheet" href="styles/home.css"/>
 
     <script src="scripts/project.js" defer></script>
 
@@ -19,7 +20,7 @@
         <h1>Chamber of Sports - Argentina</h1>
 
         <nav class="nav-links" id="nav-links">
-            <a href="" title="Home">Home</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/project.html" title="Home">Home</a>
             <a href="" title="Team Sports">Team Sports</a>
             <a href="" title="Individual Sports">Individual Sports</a>
             <a href="" title="Join">Join</a>
@@ -28,7 +29,23 @@
     </header>
 
     <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Welcome to the Chamber of Sports</h2>
+                <p>Your gateway to sport and learning about Argentina.</p>
+                <a href="" class="btn">Learn More</a>
+            </div>
+        </section>
 
+        <div class="card-grid">
+            <div class="card event-card">
+                <h2>Last awards</h2>
+                <p>**</p>
+                <p>**</p>
+                <p>**</p>
+
+            </div>
+             
 
     </main>
 
